syntax = "proto3";
package zetachain.zetacore.crosschain;

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

message LastBlockHeight {
  string creator = 1;
  string index = 2;
  string chain = 3;
  uint64 lastInboundHeight = 4;
  uint64 lastOutboundHeight = 5;
}
